--- a/sportsee/src/style.css
+++ b/sportsee/src/style.css
@@ -1,9 +1,11 @@
 body {
   width: 100%;
+  font-family: "Roboto", sans-serif;
   margin: auto;
   position: relative;
-  margin-top: 20px;
-  margin-bottom: 20px;
+  margin-top: 0px;
+  margin-bottom: 0px;
+  height: 100vh;
 }
 
 h1 {
@@ -19,6 +21,7 @@ p {
   -webkit-margin-after: 0em;
   margin-block-end: 0em;
 }
+
 
 
 
