--- a/sportsee/src/pages/Profile/profile.css
+++ b/sportsee/src/pages/Profile/profile.css
@@ -19,7 +19,6 @@
     width: 100%;
     height: 91px;
     background-color: #000000;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     z-index: 1;
 }
 
@@ -32,7 +31,6 @@
     width: 100%;
     height: 91px;
     background-color: #000000;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     z-index: 1;
 }
 
@@ -113,8 +111,8 @@
 
 .iconBtn:hover {
     border-radius: 10px;
-    border: 2px solid red;
-    transition: 0.3s;
+    transition: all 200ms ease-out;
+    box-shadow: 0 0 0 3px rgb(255, 0, 0);
 }
 
 .navIcon {
@@ -159,7 +157,10 @@
     }
 }
 
-/**** STATISTICS CONTAINER ****/
+/**** NAME ****/
 
-
+.hello-name {
+    width: 100%;
+    height: 18%;
+}
 
