--- a/sportsee/src/pages/Profile/profile.css
+++ b/sportsee/src/pages/Profile/profile.css
@@ -1,3 +1,28 @@
+/**** LOADER ****/
+
+.loader {
+    padding: 10px;
+    border: 6px solid red;
+    border-bottom-color: transparent;
+    border-radius: 22px;
+    height: 0;
+    width: 0;
+    justify-content: center;
+    -webkit-animation: rotate 1s infinite linear;
+            animation: rotate 1s infinite linear;
+}
+
+.errorMessage {
+    color: red;
+    display: flex;
+    width: 90%;
+    justify-content: center;
+    font-size: 2.5rem;
+    font-weight: bold;
+    height: 110vh;
+    margin: 100px auto;
+}
+
 /**** HORIZONTAL MENU ****/
 
 .profileContainer {
@@ -141,6 +166,10 @@
 }
 
 @media screen and (min-width: 1024px) and (max-width: 1439px) {
+    .verticalSideBar {
+        min-height: 905px;
+    }
+
     .iconsContainer {
         margin-top: 250px;
     }
@@ -157,10 +186,336 @@
     }
 }
 
+/**** USER CONTAINER ****/
+.userContainer {
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    right: 93px;
+    left: 200px;
+    top: 130px;
+    height: 75vh;
+  }
+
+  @media screen and (max-width: 1440px) {
+    .userContainer {
+      top: 140px;
+      height: 77vh;
+    }
+  }
+  
+  @media screen and (min-width: 1024px) and (max-width: 1439px) {
+    .userContainer {
+      right: 23px;
+      left: 140px;
+      height: 74vh;
+    }
+  }
+  
 /**** NAME ****/
 
-.hello-name {
+.nameTitle {
     width: 100%;
-    height: 18%;
+    font-size: 50px;
 }
 
+.name {
+    font-size: 50px;
+    font-weight: 500;
+    margin: 10px 0 10px 0;
+}
+
+.congrats {
+    font-size: 18px;
+    margin-bottom: 50px;
+}
+
+@media screen and (max-width: 1024px) {
+    .hello {
+        font-size: 36px;
+    }
+
+    .congrats {
+        font-size: 16px;
+        margin: 0;
+    }
+}
+
+/**** CHARTS ANALYSIS ****/
+.statsContainer {
+    display: flex;
+    width: 100%;
+    height: 80%;
+    margin-top: 10px;
+}
+
+.chartsContainer {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 100%;
+    height: 100%;
+}
+
+/** ENERGY COUNT **/
+.energyCountContainer {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+    align-items: flex-end;
+    justify-content: space-between;
+}
+
+.calories,
+.proteins,
+.glucids,
+.lipids {
+    display: flex;
+    width: 258px;
+    height: 100px;
+    margin-bottom: 30px;
+    background-color: #f6f5f589;
+    box-shadow: 0px 2px 4px rgba(28, 28, 28, 0.021);
+    border-radius: 5px;
+}
+
+.energy-icons {
+    width: 70px;
+    margin-left: 40px;
+}
+
+.energyNumber {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 50%;
+    margin-left: 20px;
+}
+
+.energyCalculation {
+    margin-bottom: 6.5px;
+    font-size: 20px;
+    font-weight: bold;
+}
+
+.energyTitle {
+    color: #7d818e;
+    margin: 0;
+    font-size: 14px;
+}
+
+@media screen and (max-width: 1024px) {
+    .calories,
+    .proteins,
+    .glucids,
+    .lipids {
+        height: 124px;
+        width: 258px;
+    }
+
+    .chartsContainer {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        width: 100%;
+        height: 100%;
+    }
+}
+
+  /** DAILY ACTIVITY **/
+.dailyActivityWrapper {
+    position: relative;
+    width: 95%;
+    height: 50%;
+}
+
+.activityContainer {
+    width: 95%;
+    height: 40%;
+    background-color: #f6f5f589;
+    border-radius: 5px;
+}
+
+.dailyActivityTitle {
+    position: absolute;
+    margin: 0;
+    margin-left: 25px;
+    margin-top: 20px;
+    font-size: 15px;
+    font-weight: 500;
+    font-size: 15px;
+}
+
+.customTooltipContainer {
+    display: flex;
+    flex-direction: column;
+    width: 70px;
+    height: 75px;
+    color: #fff;
+    background-color: red;
+    border: none;
+    line-height: 3;
+    font-size: 12px;
+}
+
+.dailyActivityLabel {
+    text-align: center;
+}
+
+.dailyActivityDescendantLabel {
+    text-align: center;
+  }
+
+.recharts-cartesian-axis-line {
+    display: none;
+}
+
+.recharts-cartesian-axis-tick-line {
+    display: none;
+}
+
+.recharts-wrapper .recharts-cartesian-grid-horizontal line:first-child {
+    stroke-dasharray: 0;
+}
+
+@media screen and (max-width: 1024px) {
+    .customTooltipContainer  {
+        width: 65px;
+        height: 60px;
+    }
+
+    .dailyActivityLabel {
+        font-size: 12px;
+    }
+
+    .dailyActivityDescendantLabel {
+        font-size: 12px;
+    }
+}
+
+/** SESSION LENGTH **/
+
+.sessionContainer {
+    display: flex;
+    align-items: flex-end;
+    justify-content: space-between;
+    width: 95%;
+    height: 50%;
+    margin-right: 30px;
+}
+
+.radarChartsData,
+.goalScore,
+.averageLengthTimeContainer {
+  width: 30%;
+  height: 100%;
+  box-shadow: 0px 2px 4px rgba(18, 18, 18, 0.021);
+  border-radius: 5px;
+}
+
+.averageDuration {
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 27%;
+    height: 100%;
+    background-color: rgba(3, 3, 3, 0.1);
+    border-radius: 0 5px 5px 0;
+}
+
+.averageLengthTimeContainer {
+    position: relative;
+    background-color: red;
+}
+
+.sessionLengthTitle {
+    position: absolute;
+    margin: 0;
+    margin-top: 20px;
+    margin-left: 30px;
+    width: 65%;
+    font-size: 15px;
+    color: #fff;
+    mix-blend-mode: normal;
+    opacity: 0.5;
+}
+
+.customTooltip {
+    background-color: #fff;
+    height: 35px;
+    margin: 10px;
+    width: 100%;
+    font-size: 12px;
+    line-height: 35px;
+    -webkit-user-select: none;
+       -moz-user-select: none;
+        -ms-user-select: none;
+            user-select: none;
+}
+
+.sessionLabel {
+    color: black;
+    text-align: center;
+    font-weight: 500;
+}
+
+@media screen and (max-width: 1260px) {
+    .sessionLengthTitle {
+      font-size: 12px;
+    }
+}
+
+/** RADARCHARTS **/
+
+.radarChartsData {
+    background-color: #282D30;
+    ;
+}
+
+/** GOAL SCORE **/
+
+.goalScore {
+    position: relative;
+    background-color: #f6f5f589;
+}
+
+.scoretitle {
+    position: absolute;
+    margin: 0;
+    top: 20px;
+    left: 30px;
+    font-weight: bold;
+    color: #20253A;
+}
+
+.rateGoal {
+    position: absolute;
+    margin: 0;
+    font-size: 18px;
+    top: 35%;
+    left: 35%;
+    width: 30%;
+    display: flex;
+    line-height: 1.6;
+    font-weight: 500;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    color: #777b8c;
+}
+
+@media screen and (max-width: 1024px) {
+    .rateGoal {
+      font-size: 12px;
+    }
+
+    .scoretitle {
+        left: 0;
+        top: 40px;
+        font-size: 18px;
+        text-align: center;
+        width: 100%;
+        height: auto;
+    }
+}
