--- a/sportsee/src/pages/Profile/profile.css
+++ b/sportsee/src/pages/Profile/profile.css
@@ -155,13 +155,17 @@
     color: #ffffff;
     font-size: 12px;
     width: 140px;
-    height: 12%;
+    height: 20%;
     transform: rotate(-90deg);
 }
 
 @media screen and (max-width: 1440px) {
     .iconsContainer {
         margin-top: 320px;
+    }
+
+    .verticalSideBar {
+        min-height: 1096px;
     }
 }
 
@@ -191,15 +195,14 @@
     display: flex;
     flex-direction: column;
     position: absolute;
-    right: 93px;
-    left: 200px;
+    right: 130px;
+    left: 240px;
     top: 130px;
     height: 75vh;
   }
 
   @media screen and (max-width: 1440px) {
     .userContainer {
-      top: 140px;
       height: 77vh;
     }
   }
@@ -222,12 +225,12 @@
 .name {
     font-size: 50px;
     font-weight: 500;
-    margin: 10px 0 0 0;
+    margin: 0;
 }
 
 .congrats {
     font-size: 18px;
-    margin-bottom: 50px;
+    margin-bottom: 20px;
 }
 
 @media screen and (max-width: 1024px) {
@@ -250,7 +253,7 @@
 .statsContainer {
     display: flex;
     width: 100%;
-    height: 80%;
+    height: 92%;
 }
 
 .chartsContainer {
@@ -266,7 +269,7 @@
     display: flex;
     flex-direction: column;
     width: 100%;
-    height: 100%;
+    height: 105.5%;
     align-items: flex-end;
     justify-content: space-between;
 }
@@ -319,7 +322,7 @@
     }
 
     .statsContainer {
-        height: 95%;
+        height: 100%;
         margin-top: 30px;
     }
 
@@ -338,13 +341,13 @@
   /** DAILY ACTIVITY **/
 .dailyActivityWrapper {
     position: relative;
-    width: 95%;
+    width: 97%;
     height: 50%;
 }
 
 .activityContainer {
-    width: 95%;
-    height: 40%;
+    width: 97%;
+    height: 51%;
     border-radius: 5px;
     background-color: #f6f5f589;
 }
@@ -393,7 +396,7 @@
 @media screen and (max-width: 1024px) {
     .customTooltipContainer  {
         width: 65px;
-        height: 60px;
+        height: 75px;
     }
 
     .dailyActivityLabel {
@@ -421,8 +424,8 @@
     display: flex;
     align-items: flex-end;
     justify-content: space-between;
-    width: 95%;
-    height: 50%;
+    width: 97%;
+    height: 45%;
     margin-right: 30px;
 }
 
