--- a/sportsee/src/pages/Profile/profile.css
+++ b/sportsee/src/pages/Profile/profile.css
@@ -327,6 +327,7 @@
     .statsContainer {
         height: 100%;
         margin-top: 30px;
+        margin-bottom: 30px;
     }
 
     .chartsContainer {
@@ -491,17 +492,12 @@
     .sessionLengthTitle {
       font-size: 12px;
     }
-
-    .sessionContainer {
-        height: 30%;
-    }
 }
 
 /** RADARCHARTS **/
 
 .radarChartsData {
     background-color: #282D30;
-    ;
 }
 
 /** GOAL SCORE **/
