--- a/sportsee/src/pages/Home/home.css
+++ b/sportsee/src/pages/Home/home.css
@@ -17,11 +17,16 @@
 
 .profileLinkNav {
     display: flex;
+}
+
+.linkContainer {
+    display: flex;
     height: auto;
     justify-content: space-between;
 }
 
 .profileBtn {
+    text-transform: uppercase;
     text-decoration: none;
     font-size: 1.2rem;
     font-weight: 600;
